fix: adjust margins on mobile, move code styles to posts

--- a/src/less/post.less
+++ b/src/less/post.less
@@ -1,6 +1,45 @@
 @import '_general.less';
 @import '_page.less';
 
+code {
+  background-color: var(--code-background);
+  border-radius: @corners__code;
+  color: var(--code-text);
+  font-family: Menlo, Consolas, Monaco, monospace;
+  font-size: 0.9375rem; // mobile 15px
+  padding: 1px 3px;
+
+  @media (min-width: @breakpoints__desktop--start) {
+    font-size: 0.888888rem; // desktop 16px
+  }
+}
+
+pre {
+  background-color: var(--code-background);
+  color: var(--code-text);
+  left: calc(var(--spacing) * -1);
+  line-height: 1.5;
+  overflow: auto;
+  padding: 1rem 0;
+  position: relative;
+  width: 100vw;
+
+  @media (min-width: @breakpoints__desktop--start) {
+    border-radius: @corners__code;
+    width: @sizing__container;
+  }
+
+  code {
+    // reset styles for standalone code tags
+    background-color: transparent;
+    border-radius: 0;
+
+    // allow padding on horizontal overflow
+    display: inline-block;
+    padding: 0 var(--spacing);
+  }
+}
+
 // del,
 // code {
 //   display: inline-block;
